<resources>
    <string name="app_name">Shopaholic</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="favourites">Favourites</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="cover_image">cover image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="recover_pass">Send</string>
    <string name="post">Post</string>
    <string name="_5_minutes_ago">5 min ago</string>
    <string name="last_updated_full">Last Updated</string>
    <string name="blog_cover_image">blog cover image</string>
    <string name="category_label">Category</string>
    <string name="categories_descrition">Categories...</string>
    <string name="hide_password">*******</string>
    <string name="email_hint"> EMAIL or MOBILE NUMBER</string>
    <string name="title">Title</string>
    <string name="app_name_top">ShopaHolic</string>
    <string name="old_price">Old Price</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
