<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/postButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/offer_cover_input"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/blog_cover_image"
                    android:scaleType="fitCenter"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/imageUploadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/circle_background"
                    app:backgroundTint="@android:color/background_light"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/offer_cover_input"
                    app:srcCompat="@drawable/ic_image"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/ib_categories_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"

                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/fbutton_color_transparent"
                        android:contentDescription="@string/categories_descrition"
                        android:tint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_category_add"/>

                    <TextView
                        android:id="@+id/tv_selected_items"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:padding="8dp"
                        android:text="@string/category_label"
                        app:layout_constraintBottom_toBottomOf="@+id/ib_categories_input"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toRightOf="@+id/ib_categories_input"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ib_categories_input"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/description_card"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/title"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="14sp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/description_card"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <EditText
                    android:id="@+id/oldPriceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/old_price"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="60dp"
                    tools:layout_editor_absoluteY="8dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/akronim"
                        android:padding="12dp"
                        android:text="Discount"
                        android:textColor="@color/colorYellow"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <EditText
                        android:id="@+id/discount_percentage_text"
                        android:layout_width="60dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/colorYellow"
                        android:fontFamily="@font/akronim"
                        android:hint="00"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView8"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toTopOf="@+id/textView8"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="@color/colorYellow"
                        android:fontFamily="@font/akronim"
                        android:padding="8dp"
                        android:text="%"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@+id/discount_percentage_text"
                        app:layout_constraintStart_toEndOf="@+id/discount_percentage_text"
                        app:layout_constraintTop_toTopOf="@+id/discount_percentage_text"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/offer_expiry_date_input"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Offer Expiry Date"
                    android:fontFamily="@font/ubuntu_light"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/postButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:ems="10"
                    android:hint="Description"
                    android:inputType="textMultiLine"

                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="14sp"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/akronim"
        android:text="@string/post"
        android:textColor="@color/colorYellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>